--- a/example.html
+++ b/example.html
@@ -1,14 +1,16 @@
-<script src=/d/j.js></script>
+<script src=uniapi.js></script>
 
 <script>
 (function () {
   var u = window.u = new UniversalApi({
     session: 'vYUMRkBPuO1xTyaiufdPUrYj8XXvu01oz3iz',
-    app_id: 1
+    app_id: 1,
+    url: 'http://localhost:1234/user.json'
   });
   u.authorize(function (user) {
-    if !user.session
-      return false
+    if (!user.session) {
+      return false;
+    }
     console.info(user, u.session(), u.data('type'));
   })
 })();
