save more then one param

--- a/example.html
+++ b/example.html
@@ -11,7 +11,7 @@
     if (!user.session) {
       return false;
     }
-    console.info(user, u.session(), u.data('type'));
+    console.info(user, u.session(), u.get('type'));
   })
 })();
 </script>
